[gd_scene load_steps=5 format=3 uid="uid://bfjefwa5hh4ky"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_7kdpn"]
[ext_resource type="Texture2D" uid="uid://3rhgvj0gnd21" path="res://Sunny Land Collection Files/Assets/Packs/Sunnyland/environment/Background/back.png" id="2_iganl"]
[ext_resource type="Texture2D" uid="uid://cka0issqq26dj" path="res://Sunny Land Collection Files/Assets/Packs/Sunnyland/environment/Background/middle.png" id="3_vf5sa"]
[ext_resource type="AudioStream" uid="uid://duxf6418a84lq" path="res://SunnyLand Music/SunnyLand Music/Adventure pack 1 ogg/exploration.ogg" id="4_vgylx"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_7kdpn")

[node name="Background" type="Node2D" parent="."]

[node name="Back" type="Sprite2D" parent="Background"]
position = Vector2(968, 544)
scale = Vector2(5.04167, 4.53333)
texture = ExtResource("2_iganl")

[node name="Middle" type="Sprite2D" parent="Background"]
position = Vector2(144, 752)
scale = Vector2(1.68182, 1.86957)
texture = ExtResource("3_vf5sa")

[node name="Middle2" type="Sprite2D" parent="Background"]
position = Vector2(416, 752)
scale = Vector2(1.68182, 1.86957)
texture = ExtResource("3_vf5sa")

[node name="Middle3" type="Sprite2D" parent="Background"]
position = Vector2(712, 752)
scale = Vector2(1.68182, 1.86957)
texture = ExtResource("3_vf5sa")

[node name="Middle4" type="Sprite2D" parent="Background"]
position = Vector2(1008, 768)
scale = Vector2(1.68182, 1.86957)
texture = ExtResource("3_vf5sa")

[node name="Middle5" type="Sprite2D" parent="Background"]
position = Vector2(1296, 760)
scale = Vector2(1.68182, 1.86957)
texture = ExtResource("3_vf5sa")

[node name="Middle6" type="Sprite2D" parent="Background"]
position = Vector2(1576, 760)
scale = Vector2(1.68182, 1.86957)
texture = ExtResource("3_vf5sa")

[node name="Middle7" type="Sprite2D" parent="Background"]
position = Vector2(1864, 752)
scale = Vector2(1.68182, 1.86957)
texture = ExtResource("3_vf5sa")

[node name="Title" type="Label" parent="."]
offset_left = 640.0
offset_top = 136.0
offset_right = 1280.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Eagle Hunter"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 760.0
offset_top = 424.0
offset_right = 1160.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 61
text = "Start"

[node name="HelpButton" type="Button" parent="."]
offset_left = 760.0
offset_top = 616.0
offset_right = 1160.0
offset_bottom = 708.0
theme_override_font_sizes/font_size = 61
text = "Help"

[node name="QuitButton" type="Button" parent="."]
offset_left = 760.0
offset_top = 800.0
offset_right = 1160.0
offset_bottom = 892.0
theme_override_font_sizes/font_size = 61
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vgylx")
autoplay = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
